theme/html_mockups/style-override1.css
/* ... */
.profile_menu .dropdown-toggle {
  padding: 10px 17px;
  vertical-align: middle;
/*  height: 88px;*/
    height: 100%;
}
.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-menu li > a:hover {
    background-color: #2391ed;
    background-image: none;
    color: #FFF;
}
.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
  background-color:#ed1d24;
}

.navbar-default .navbar-nav > li.button{
/*  padding: 10px 17px;*/
  padding: 11px 17px;
  float: left;
}
 .navbar-default .navbar-toggle{
  margin: 27px 17px;

}

.profile_menu .dropdown-toggle span {
  display: inline-block;
  margin-top: 4px;
  font-size: 16px;
  font-weight: lighter;
}

.profile_menu img {
  margin-right: 10px;
  border-radius: 2px;
  -webkit-border-radius: 2px;
}

.progress-bar-info {
  background-color: #0060af;
}
.cl-vnavigation .parent ul li {
    border-left: 1px solid transparent;
}
.cl-vnavigation .parent ul li.active a {
    background-color: #1e2025;
    border-left: 1px solid #fdb913;
}
.label-success {
    background-color: #009248;
}
.breadcrumb a {

  text-decoration: none;
  outline: 0 none;
}
.breadcrumb a:focus, a:hover, a:active {
  outline: 0 none;
  text-decoration: underline;
  color: #eb6100;
}
.cl-mcont .block, .block-flat {
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.40);
  border: 0;
  margin-bottom: 30px;
  background: #FFF;
  border-radius: 3px;
  -webkit-border-radius: 3px;
}
.block .header {
  border-radius: 3px 3px 0 0;
  -webkit-border-radius: 3px 3px 0 0;
  padding: 10px 15px;
}
.block-flat, .block-wizard {
  margin-bottom: 20px;

}

.block-flat h3{
  font-family: Raleway;
  font-size: 25px;
}

.page-head {
  border-bottom:none;
  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.4);
}
.cl-mcont .block .stat-data .stat-orange,
.cl-mcont .block-flat .stat-data .stat-orange {
  background: #ee815e;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  text-align: center;
  color: #FFF;
  padding: 20px 10px;
}
.cl-mcont .block, .block-flat {
  margin-bottom: 20px;
}
.cl-mcont{
  background-color:#eee;
  font-size:14px;
  padding: 15px;
}
.cl-vnavigation li a {

  font-size: 14px;
}
.cl-vnavigation .parent ul li a {
  font-size: 13px;
}


.cl-vnavigation li a i {
  font-size: 15px;
}
.cl-vnavigation li ul {

  padding-top: 10px;
}

/* Icons */
.p-i i {
    padding-right: 5px;
}
.input-group .btn {
    line-height: 24px;
}
/* Profile */
.name {
    margin-bottom: 0;
}

/* Pictures */
.photo {
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.13);
}
.photo img {
  width: 100%;
}

@media (min-width: 979px) {

.cl-sidebar .collapse-button, #cl-wrapper.fixed-menu .menu-space, .cl-sidebar  {

  width: 250px;
}
.cl-vnavigation .parent a {
  background: url("images/arrow.png") no-repeat scroll right 16px top 21px transparent;
}
}

@media (min-width: 768px) and (max-width: 979px) {

  .navbar-default .navbar-brand span {
    display: block;
  }

}

@media (min-width: 768px) {
  .navbar > .container .navbar-brand,
  .navbar > .container-fluid .navbar-brand {
/*    height: 88px;*/
      height: 50px;
      margin-left: 0;
  }
}
@media (max-width: 767px){

  #cl-wrapper{
  padding-top:0px;

}
#head-nav .navbar-nav {
  padding: 0 10px;
  background-color: #666;
  border-color: #fff;
}
}

@media only screen and (max-width: 800px) {

	/* Force table to not be like tables anymore */
	#rwd-table table,
	#rwd-table thead,
	#rwd-table tbody,
	#rwd-table th,
	#rwd-table td,
	#rwd-table tr {
		display: block;
	}

	/* Hide table headers (but not display: none;, for accessibility) */
	#rwd-table thead tr {
		position: absolute;
		top: -9999px;
		left: -9999px;
	}

	#rwd-table tr { border: 1px solid #ccc; }

	#rwd-table td {
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee;
		position: relative;
		padding-left: 50%;
		white-space: normal;
		text-align:left;
	}

	#rwd-table td:before {
		/* Now like a table header */
		position: absolute;
		/* Top/left values mimic padding */
		top: 6px;
		left: 6px;
		width: 45%;
		padding-right: 10px;
		white-space: nowrap;
		text-align:left;
		font-weight: bold;
	}

	/*
	Label the data
	*/
	#rwd-table td:before { content: attr(data-title); }
}


/* NEW ZA CHARTS STYLES */
.cl-mcont .row {
    margin-top: 0;
}
.table-nav {
    margin-bottom: 10px;
}
.table-nav a {
    color: inherit;
    font-size: 12px;
}
.styled-tabs {
    background-color: #f4f4f4;
}
.styled-tabs a {
    color: #666;
    font-size: 14px;
}
.red-bg {
    background-color: #e11b22;
    color: #fff;
    font-weight: 100;
}
.th-sm {
    padding: 10px!important;    
}
.tab-borderless {
    border-left: 1px solid transparent;
    border-right: 1px solid transparent;
    border-bottom: 1px solid transparent;
    box-shadow: none;
    padding: 20px 30px 20px 0;
}
.inline-tabs {
    margin-top: 5px;
}
.inline-tabs > li.active > a, .inline-tabs > li.active > a:hover, .inline-tabs > li.active > a:focus {
    color: #555;
    cursor: default;
    background-color: #fff;
    border-bottom-color: transparent;
}
.inline-tabs > li.active {
    position: relative;
}
.inline-tabs > li {
    font-size: 14px;
    margin-right: 2px;
}
.inline-tabs > li a {
    color: #333;
}
.inline-tabs > li {
    float: left;
    margin-bottom: -1px;
}
.inline-tabs > li.active > a:after, .inline-tabs > li.active > a:hover:after, .inline-tabs > li.active > a:focus:after {
    content: "";
    display: block;
    height: 2px;
    background: #ee5037;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
}
.inline-tabs > li.active > a, .inline-tabs > li.active > a:hover, .inline-tabs > li.active > a:focus {
/*    border-top: 2px solid #43A0F2;*/
    border-radius: 0;
    -webkit-border-radius: 0;
    border-bottom: 0;
    padding-bottom: 10px;
    padding-top: 8px;
    box-shadow: none;
    border-left: 1px solid transparent;
    border-right: 1px solid transparent;
    position: static;
}
/* ... */

